src/test/deca/syntax/invalid/ifIncluded.deca
{
int a=0;
int b=2;
if (a==b) {
    else {
        print("pas bon");
    }
}
}